--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
             <div id="inventory"></div>
         </div>
     </div>
+    <div class="energy-actions">
+    <button onclick="watchAdForEnergy()">📺 Посмотреть рекламу (+20⚡)</button>
+    <button onclick="dailyReward()">🎁 Ежедневная награда (+50⚡)</button>
+    <button onclick="inviteFriend()">👥 Пригласить друга (+100⚡)</button>
+</div>
 </body>
 </html>
