--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
     <button onclick="dailyReward()">🎁 Ежедневная награда (+50⚡)</button>
     <button onclick="inviteFriend()">👥 Пригласить друга (+100⚡)</button>
 </div>
+    <div class="achievements">
+    <h3>🏆 ДОСТИЖЕНИЯ</h3>
+    <div class="achievements-grid" id="achievements-grid"></div>
+</div>
 </body>
 </html>
